--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "mage2pro_deployment"
-	,"version": "0.1.3"
+	,"version": "0.2.0"
 	,"description": "A deployment script for my Magento 2 based websites."
 	,"author": "Dmitry Fedyuk"
 	,"dependencies": {
 		"escape-string-regexp": ">=1.0.5"
 		,"fs-extra": ">=3.0.0"
+		,"ini": ">=1.3.4"
 		,"lodash": ">=4.17.4"
 		,"scp2": ">=0.5.0"
 		,"simple-ssh": ">=0.9.0"
